# TEST_REPO

./: README.md  files.txt  main.cpp  requirements.txt  test.txt
config/: .gitignore  CMakeLists.txt
docs/: API.md  EXAMPLES.md  README.md
include/: calculator.h  data_processor.h  utils.h
src/: calculator.cpp  data_processor.cpp  main.cpp  utils.cpp
tests/: data_analyzer.py  test_runner.py
